# personal-briefing

./: .gitignore  .pre-commit-config.yaml  README.md  fix-oidc-trust.sh  github-actions-trust-policy.json  github-actions-trust-policy.json.bak  pyproject.toml  setup-github-oidc.sh
.github/workflows/: deploy.yml  destroy.yml
cdk/: app.py  cdk.json
cdk/stacks/: briefing_stack.py
config/: topics.yaml
scripts/: build-lambda.sh  destroy-infrastructure.sh
src/personal_briefing/: __init__.py  collector.py  emailer.py  handler.py  models.py  summarizer.py
tests/: conftest.py  test_collector.py  test_emailer.py  test_handler.py  test_summarizer.py
